[gd_scene load_steps=4 format=3 uid="uid://b0x4bqlotpsor"]

[ext_resource type="Script" path="res://game_ui/game_ui.gd" id="1_yllsg"]
[ext_resource type="LabelSettings" uid="uid://bj1xyyoju5bho" path="res://fonts/red_score_font.tres" id="2_b13x7"]
[ext_resource type="LabelSettings" uid="uid://ddp81l7kp0jyh" path="res://fonts/yellow_score_font.tres" id="3_1cf0c"]

[node name="gameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yllsg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="timeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "18.5
"
label_settings = ExtResource("2_b13x7")

[node name="heightLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "156 cm
"
label_settings = ExtResource("3_1cf0c")

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
rounded = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
